--- a/src/SportEvent/SportEvent.scss
+++ b/src/SportEvent/SportEvent.scss
@@ -6,4 +6,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  .nowEventLabelsContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    background-color: green;
+    padding: 15px 40px;
+    border-radius: 8px;
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
 }
