feat: styled title for sport events

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -26,7 +26,7 @@ html, body {
   background-color: #12203e;
   color: $textColor;
   align-items: center;
-  justify-content: space-around
+  justify-content: space-around;
 }
 
 .app {
