--- a/src/SportEventHeader/SportEventHeader.scss
+++ b/src/SportEventHeader/SportEventHeader.scss
@@ -1,14 +1,26 @@
 .sportEventHeader {
+  width: 65%;
   padding: 10px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
 
+  .text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
+
   .title {
-    margin: 5px 0;
+    height: 55px;
+    margin: 0;
 
     &-withoutSportEventContainer {
+      height: 20px;
       font-size: 16px;
+      -webkit-line-clamp: 1;
     }
   }
 
