--- a/src/TimeCounter/TimeCounter.scss
+++ b/src/TimeCounter/TimeCounter.scss
@@ -1,3 +1,11 @@
+.timeCounter {
+  margin: 0 10px;
+
+  &-hidden {
+    display: none;
+  }
+}
+
 .antProgressTextCustom {
   padding: 10px !important;
 
