--- a/src/TimersList/TimersList.scss
+++ b/src/TimersList/TimersList.scss
@@ -2,11 +2,7 @@
   display: flex;
   justify-content: center;
   margin: 30px 0;
-  padding: 0 10px;
+  padding: 10px 0;
   flex-wrap: wrap;
   overflow: hidden;
-
-  .timersListItem {
-    margin: 10px 20px;
-  }
 }
